--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "agamer.pro",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "gatsby": "^2.26.1",
+    "gatsby-plugin-ts": "^2.7.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "prettier": "2.2.1"
