--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "prettier": "2.2.1"
   },
   "repository": {
